src/test/deca/syntax/invalid/decl_missing_expr.deca

// Description :
// Expression manquante après '=' en déclaration
//
// Resultats :
// Erreur syntaxique

{
    int x = ;
}